tests/spec/non_conformant/errors/fn_error/ruleset.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-error/ruleset.hrx"

// Ignoring "test", error tests are not supported yet.
